rewrote draw edge command