@@ -145,15 +145,15 @@ public class RerootCommand extends UndoableRedoableCommand {
 				if (oldEdgeId != -1) {
 					var index = oldEdgePath.getElements().size() / 2;
 					var edgeHit = new CreateEdgeCommand.EdgeHit(graph.findEdgeById(oldEdgeId), oldEdgePath, index);
-					var parts = edgeHit.splitPath();
-					var location = PathUtils.getCoordinates(parts.getSecond().getElements().get(0));
+					var parts = PathUtils.split(edgeHit.path(), false, edgeHit.elementIndex());
+					var location = PathUtils.getCoordinates(parts.get(1).getElements().get(0));
 					var w = view.createNode(location, newNodeId);
 					newNodeId = w.getId();
 
-					var firstPath = PathUtils.createPath(CollectionUtils.reverse(PathUtils.extractPoints(parts.getFirst())), false);
+					var firstPath = PathUtils.createPath(CollectionUtils.reverse(PathUtils.extractPoints(parts.get(0))), false);
 					var e1 = view.createEdge(w, graph.findNodeById(oldSourceId), firstPath, newEdgeAtSourceId);
 					newEdgeAtSourceId = e1.getId();
-					var e2 = view.createEdge(w, graph.findNodeById(oldTargetId), parts.getSecond(), newEdgeAtTargetId);
+					var e2 = view.createEdge(w, graph.findNodeById(oldTargetId), parts.get(1), newEdgeAtTargetId);
 					newEdgeAtTargetId = e2.getId();
 
 					view.getNodeSelection().select(w);
